Fix to remove large gap below blog post items in a list of blog posts

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -4548,7 +4548,7 @@ html {
   padding-bottom: 6rem;
 }
 
-.entry__content > *:not(.group-row):last-child {
+html:not(.blog) .entry__content > *:not(.group-row):last-child {
   margin-bottom: 6rem;
 }
 
